--- a/Presentation.html
+++ b/Presentation.html
@@ -10,7 +10,7 @@
     <div id="lisere"></div>
 
     <header>
-        <a href="Images/mrbean.jpg"><img src="Images/mrbeanmini.jpg" alt="Photo d'identité" title="Cliquez pour agrandir" align="right"></a>
+        <a href="https://vignette.wikia.nocookie.net/mrbean/images/4/4b/Mr_beans_holiday_ver2.jpg/revision/latest/scale-to-width-down/310?cb=20181130033425"><img src="https://vignette.wikia.nocookie.net/mrbean/images/4/4b/Mr_beans_holiday_ver2.jpg/revision/latest/scale-to-width-down/310?cb=20181130033425" alt="Photo d'identité" title="Photo d'identité" align="right"></a>
         <h1 align="center">Cyril BOUVET</h1>
         <p align="center">Développeur en devenir</p>
     </header>
