--- a/Presentation.html
+++ b/Presentation.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8" />
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="style.css">
         <title>CV de Cyril</title>
 </head>
 <body>
