--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <article id="interets">
             <h1 id="centres_interets">Mes centres d'intérêts</h1>
             <ul>
-                <li>Séries</li>
+                <li><a href="https://www.netflix.com/fr/">Séries</a></li>
                 <li>Films</li>
                 <li>Jeux vidéo</li>
                 <li>Internet</li>
