--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <h1 id="centres_interets">Mes centres d'intérêts</h1>
             <ul>
                 <li><a href="https://www.netflix.com/fr/">Séries</a></li>
-                <li>Films</li>
-                <li>Jeux vidéo</li>
-                <li>Internet</li>
-                <li>Apprendre</li>
+                <li><a href="https://www.youtube.com/?gl=FR&hl=fr">Vidéos</a></li>
+                <li><a href="http://www.jeuxvideo.com/">Jeux vidéo</a></li>
+                <li><a href="https://twitter.com/">Réseaux sociaux</a></li>
+                <li><a href="https://openclassrooms.com/fr/">Apprendre</a></li>
             </ul>
         </article>
     </section>
